After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686841 - pango: fix shadow text color
pango: fix shadow text color
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.0.3
Assigned To: Tim-Philipp Müller
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-10-25 07:37 UTC by Jihyun Cho
Modified: 2012-10-25 16:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix shadow text color (1.71 KB, patch)
2012-10-25 07:45 UTC, Jihyun Cho
none Details | Review
fix attribute reference (1.74 KB, patch)
2012-10-25 15:38 UTC, Jihyun Cho
committed Details | Review

Description Jihyun Cho 2012-10-25 07:37:24 UTC
Hi.
I made a pango patch.
This patch will fix shadow text color, if the subtitle has foreground color.
More information, please see the screenshot below.
Thanks.

before: http://dna.dongguk.ac.kr/~jihyun/before.png
after: http://dna.dongguk.ac.kr/~jihyun/after.png
Comment 1 Jihyun Cho 2012-10-25 07:45:56 UTC
Created attachment 227226 [details] [review]
fix shadow text color

I'm sorry. I've read 'Submitting Patches' manual later.
Comment 2 Jihyun Cho 2012-10-25 15:38:50 UTC
Created attachment 227277 [details] [review]
fix attribute reference

Previous patch has some bugs associated with the attribute variable reference.
This patch fixed it.
Comment 3 Tim-Philipp Müller 2012-10-25 16:20:22 UTC
That does look much better indeed :)

Thanks for the patch, ported it to the 1.0 branch (where this code is in a different file), and pushed it:

commit 3138c4e696982684c57a9846d7dff2d59faf6f1b
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Thu Oct 25 17:14:32 2012 +0100

    pango: avoid unnecessary pango attribute list copy
    
    We just want to keep it alive, not modify it, so a
    simple ref should be enough.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=686841

commit 2e0174e13cf8c316c5fd3bb47f2cf1f2c1490a22
Author: Jihyun Cho <jihyun.jo@gmail.com>
Date:   Fri Oct 26 00:29:11 2012 +0900

    pango: delete foreground color in shadow text
    
    This makes colored text have gray drop shadows
    instead of colored ones, which looks much better.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=686841